Sync all content

--- a/content/resources/9-07_f2016.md
+++ b/content/resources/9-07_f2016.md
@@ -4,6 +4,8 @@ description: ''
 file: /courses/9-07-statistics-for-brain-and-cognitive-science-fall-2016/e4e347a8343d000398f851c2a53ec73d_9.07_F2016.zip
 file_size: 30037
 file_type: application/zip
+hide_download: true
+hide_download_original: null
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
