--- a/content/resources/9-07f16-th.md
+++ b/content/resources/9-07f16-th.md
@@ -4,6 +4,8 @@ description: CHP image thumbnail for 9.07
 file: /courses/9-07-statistics-for-brain-and-cognitive-science-fall-2016/6deb28b2639bf13bd411181ecac509a4_9-07f16-th.png
 file_size: 9800
 file_type: image/png
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: A Gaussian (normal) probability distribution is often used for statistical
     analysis in brain and cognitive sciences. (Figure by Professor Emery Brown)
