--- a/content/resources/9-07f16_th.md
+++ b/content/resources/9-07f16_th.md
@@ -4,6 +4,8 @@ description: New image Upload
 file: /courses/9-07-statistics-for-brain-and-cognitive-science-fall-2016/562bb004c800c9dd1d8c7954704e5d0f_9.07f16_th.jpg
 file_size: 3371
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: ''
   credit: ''
