--- a/content/resources/mit9_07f16_lec10-2.md
+++ b/content/resources/mit9_07f16_lec10-2.md
@@ -4,6 +4,8 @@ description: This file contains information regarding corrigienda.
 file: /courses/9-07-statistics-for-brain-and-cognitive-science-fall-2016/7015feafb69e298f3253e7780c1b2a91_MIT9_07F16_lec10.2.pdf
 file_size: 157200
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
