--- a/content/resources/mit9_07f16_lec10-1.md
+++ b/content/resources/mit9_07f16_lec10-1.md
@@ -4,6 +4,8 @@ description: This file contains information regarding Bayesian Methods.
 file: /courses/9-07-statistics-for-brain-and-cognitive-science-fall-2016/7cb4437c4ce40e4136a2afae3e6082ba_MIT9_07F16_lec10.1.pdf
 file_size: 334393
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
