--- a/content/resources/mit9_07f16_lec11.md
+++ b/content/resources/mit9_07f16_lec11.md
@@ -4,6 +4,8 @@ description: This file contains information regarding bootstrap and Monte Carlo 
 file: /courses/9-07-statistics-for-brain-and-cognitive-science-fall-2016/c248aba568fbaf334adcfd897ee0c38a_MIT9_07F16_lec11.pdf
 file_size: 1422841
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
