--- a/content/resources/mit9_07f16_lec12.md
+++ b/content/resources/mit9_07f16_lec12.md
@@ -4,6 +4,8 @@ description: This file contains information regarding hypothesis testing I & II.
 file: /courses/9-07-statistics-for-brain-and-cognitive-science-fall-2016/8fa39994fa6b066d23c68c78f0923531_MIT9_07F16_lec12.pdf
 file_size: 2394238
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
